<?xml version="1.0" encoding="UTF-8"?><!--
  ~ Copyright (c) 2023 - IToncek
  ~
  ~ All rights to modifying this source code are granted, except for changing licence.
  ~ Any and all products generated from this source code must be shared with a link
  ~ to the original creator with clear and well-defined mention of the original creator.
  ~ This applies to any lower level copies, that are doing approximately the same thing.
  ~ If you are not sure, if your usage is within these boundaries, please contact the
  ~ author on their public email address.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.itoncek</groupId>
    <artifactId>stellariumPanorama</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.14</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.json/json -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230227</version>
        </dependency>
        <dependency>
            <groupId>me.tongfei</groupId>
            <artifactId>progressbar</artifactId>
            <version>0.9.4</version>
        </dependency>
    </dependencies>

    <packaging>pom</packaging>
    <modules>
        <module>BlenderMover</module>
    </modules>
</project>